--- a/style.css
+++ b/style.css
@@ -77,8 +77,52 @@
 .grocery-form h3{
     text-align: center;
     text-transform: capitalize;
-    color: hsl(205, 86%, 17%);
+    background-color: hsl(205, 86%,17%);
     margin-bottom: 0.15rem;
     letter-spacing: 0.5rem;
 }
+.form-control{
+    display:flex;
+    justify-content: center;
+}
 
+#grocery {
+    padding: 0.25rem;
+    padding-left: Irem;
+    background-color:hsl(210, 36%, 96%);
+    border-top-left-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+    border-color: transparent;
+    font-size: 1rem;
+    flex: 1 0 auto;
+    color: hs1(210, 22%, 49%);
+}
+
+
+#grocery::placeholder {
+    color: hsl(210, 80%, 80%);
+}
+
+.submit-bth {
+    background-color: hsl(205, 86%,81%);
+    background-color: transparent;
+    flex: 0 0 5rem;
+    align-items: center;
+    text-transform: capitalize;
+    letter-spacing: 2px;
+    border-top-right-radius: .25rem;
+    border-bottom-right-radius: .25rem;
+    cursor:pointer;
+    font-size: 0.85rem;
+    transition: all 0.5s liner;
+}
+
+.submit-btn:hover{
+    background-color: hsl(205, 63%, 48%);
+    color: white;
+
+}
+
+.grocery-container {
+    margin-top: 2rem;
+}
