--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 .grocery-form h3{
     text-align: center;
     text-transform: capitalize;
-    background-color: hsl(205, 86%,17%);
+    background-color: hsl(205, 49%, 85%);
     margin-bottom: 0.15rem;
     letter-spacing: 0.5rem;
 }
@@ -125,4 +125,28 @@
 
 .grocery-container {
     margin-top: 2rem;
+}
+
+.alert {
+    margin-bottom: 1rem;
+    height: 1.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+    border-radius: 0.25rem;
+    letter-spacing: 0.25rem;
+    text-transform: capitalize;
+}
+
+
+.alert-success{
+    color:#155724;
+    background-color: #d4edda;
+
+}
+
+alert-danger{
+    color:#721c24;
+    background-color: #f8d7da;
 }
